Add auth and SSR

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "@blitzjs/auth": "2.0.0-beta.4",
     "@blitzjs/next": "2.0.0-beta.4",
     "@blitzjs/rpc": "2.0.0-beta.4",
+    "@emotion/react": "11.10.4",
+    "@emotion/server": "11.10.0",
+    "@mantine/core": "5.4.2",
+    "@mantine/hooks": "5.4.2",
+    "@mantine/next": "5.5.0",
+    "@mantine/ssr": "5.4.2",
     "@prisma/client": "4.0.0",
     "blitz": "2.0.0-beta.4",
     "final-form": "4.20.7",
