--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "grammar-gen": "nearleyc labelGrammar.ne > app/lib/labelGrammar.ts"
   },
   "prisma": {
     "schema": "db/schema.prisma"
@@ -34,8 +35,15 @@
     "@mantine/next": "5.5.0",
     "@mantine/ssr": "5.4.2",
     "@prisma/client": "4.0.0",
+    "@tabler/icons": "1.101.0",
+    "@types/nearley": "2.11.2",
     "blitz": "2.0.0-beta.4",
+    "date-fns": "2.29.3",
     "final-form": "4.20.7",
+    "lodash": "4.17.21",
+    "loglevel": "1.8.0",
+    "moo": "0.5.2",
+    "nearley": "2.20.1",
     "next": "12.2.5",
     "prisma": "4.0.0",
     "react": "18.2.0",
@@ -47,6 +55,7 @@
     "@next/bundle-analyzer": "12.0.8",
     "@testing-library/jest-dom": "5.16.3",
     "@types/jest": "27.4.1",
+    "@types/lodash": "4.14.186",
     "@types/node": "17.0.16",
     "@types/preview-email": "2.0.1",
     "@types/react": "18.0.17",
