--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mantine/hooks": "5.4.2",
     "@mantine/modals": "5.5.4",
     "@mantine/next": "5.5.0",
+    "@mantine/notifications": "5.5.5",
     "@mantine/ssr": "5.4.2",
     "@prisma/client": "4.0.0",
     "@tabler/icons": "1.101.0",
