--- a/package.json
+++ b/package.json
@@ -29,53 +29,53 @@
     "npm": "8.10.0"
   },
   "dependencies": {
-    "@blitzjs/auth": "2.0.0-beta.11",
-    "@blitzjs/next": "2.0.0-beta.11",
-    "@blitzjs/rpc": "2.0.0-beta.11",
-    "@canac/earley-bird": "0.0.4",
-    "@emotion/react": "11.10.4",
-    "@emotion/server": "11.10.0",
-    "@mantine/core": "5.4.2",
-    "@mantine/form": "5.5.2",
-    "@mantine/hooks": "5.4.2",
-    "@mantine/modals": "5.5.4",
-    "@mantine/next": "5.5.0",
-    "@mantine/notifications": "5.5.5",
-    "@mantine/ssr": "5.4.2",
-    "@prisma/client": "4.0.0",
-    "@tabler/icons": "1.101.0",
-    "blitz": "2.0.0-beta.11",
-    "date-fns": "2.29.3",
-    "lodash": "4.17.21",
-    "loglevel": "1.8.0",
-    "moo": "0.5.2",
-    "next": "12.2.5",
-    "prisma": "4.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "3.17.3"
+    "@blitzjs/auth": "^2.0.0-beta.31",
+    "@blitzjs/next": "^2.0.0-beta.31",
+    "@blitzjs/rpc": "^2.0.0-beta.31",
+    "@canac/earley-bird": "^0.0.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
+    "@mantine/core": "^6.0.17",
+    "@mantine/form": "^6.0.17",
+    "@mantine/hooks": "^6.0.17",
+    "@mantine/modals": "^6.0.17",
+    "@mantine/next": "^6.0.17",
+    "@mantine/notifications": "^6.0.17",
+    "@mantine/ssr": "^6.0.17",
+    "@prisma/client": "^5.1.1",
+    "@tabler/icons-react": "^2.30.0",
+    "blitz": "^2.0.0-beta.31",
+    "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
+    "loglevel": "^1.8.1",
+    "moo": "^0.5.2",
+    "next": "^13.4.12",
+    "prisma": "^5.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.0.8",
-    "@testing-library/jest-dom": "5.16.3",
-    "@types/jest": "27.4.1",
-    "@types/lodash": "4.14.186",
-    "@types/node": "17.0.16",
-    "@types/preview-email": "2.0.1",
-    "@types/react": "18.0.17",
-    "@typescript-eslint/eslint-plugin": "5.30.5",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.3.1",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "husky": "7.0.4",
-    "jest": "27.5.1",
-    "lint-staged": "12.1.7",
-    "prettier": "^2.5.1",
-    "prettier-plugin-prisma": "3.8.0",
-    "pretty-quick": "3.1.3",
-    "ts-jest": "28.0.7",
-    "typescript": "^4.5.3"
+    "@next/bundle-analyzer": "^13.4.12",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@types/jest": "^29.5.3",
+    "@types/lodash": "^4.14.196",
+    "@types/node": "^20.4.8",
+    "@types/preview-email": "^3.0.1",
+    "@types/react": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-plugin-import": "^2.28.0",
+    "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "lint-staged": "^13.2.3",
+    "prettier": "^2.8.8",
+    "prettier-plugin-prisma": "^4.17.0",
+    "pretty-quick": "^3.1.3",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.1.6"
   },
   "private": true
 }
