--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "blitz start",
     "studio": "blitz prisma studio",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
-    "test": "jest",
-    "test:watch": "jest --watch",
+    "test": "vitest",
     "prepare": "husky install",
     "grammar-gen": "earley-bird compile labelGrammar.ne --outdir app/lib --outfile labelGrammar.ts"
   },
@@ -58,24 +57,24 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
     "@testing-library/jest-dom": "^5.17.0",
-    "@types/jest": "^29.5.3",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.8",
     "@types/preview-email": "^3.0.1",
     "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@vitejs/plugin-react": "4.0.4",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.3",
-    "jest": "^29.6.2",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "prettier-plugin-prisma": "^4.17.0",
     "pretty-quick": "^3.1.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.34.1"
   },
   "private": true
 }
