--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
     "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "14.0.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.8",
     "@types/preview-email": "^3.0.1",
@@ -68,6 +69,7 @@
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.3",
+    "jsdom": "22.1.0",
     "lint-staged": "^13.2.3",
     "prettier": "^2.8.8",
     "prettier-plugin-prisma": "^4.17.0",
