--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "blitz build",
     "start": "blitz start",
     "studio": "blitz prisma studio",
-    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "lint": "eslint --ignore-path .gitignore --ext .js,.ts,.tsx . && stylelint app/**/*.css",
     "test": "vitest",
     "prepare": "husky install",
     "grammar-gen": "earley-bird compile labelGrammar.ne --outdir app/lib --outfile labelGrammar.ts"
@@ -21,6 +21,9 @@
   "lint-staged": {
     "*.{js,ts,tsx}": [
       "eslint --fix"
+    ],
+    "*.css": [
+      "stylelint --fix"
     ]
   },
   "volta": {
@@ -32,18 +35,15 @@
     "@blitzjs/next": "^2.0.0-beta.31",
     "@blitzjs/rpc": "^2.0.0-beta.31",
     "@canac/earley-bird": "^0.0.4",
-    "@emotion/react": "^11.11.1",
-    "@emotion/server": "^11.11.0",
-    "@mantine/core": "^6.0.17",
-    "@mantine/form": "^6.0.17",
-    "@mantine/hooks": "^6.0.17",
-    "@mantine/modals": "^6.0.17",
-    "@mantine/next": "^6.0.17",
-    "@mantine/notifications": "^6.0.17",
-    "@mantine/ssr": "^6.0.17",
+    "@mantine/core": "^7.1.2",
+    "@mantine/form": "^7.1.2",
+    "@mantine/hooks": "^7.1.2",
+    "@mantine/modals": "^7.1.2",
+    "@mantine/notifications": "^7.1.2",
     "@prisma/client": "^5.1.1",
     "@tabler/icons-react": "^2.30.0",
     "blitz": "^2.0.0-beta.31",
+    "clsx": "2.0.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
@@ -60,7 +60,6 @@
     "@testing-library/react": "14.0.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.8",
-    "@types/preview-email": "^3.0.1",
     "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@vitejs/plugin-react": "4.0.4",
@@ -71,10 +70,16 @@
     "husky": "^8.0.3",
     "jsdom": "22.1.0",
     "lint-staged": "^13.2.3",
+    "postcss": "8.4.30",
+    "postcss-preset-mantine": "1.7.0",
+    "postcss-simple-vars": "7.0.1",
     "prettier": "^2.8.8",
     "prettier-plugin-prisma": "^4.17.0",
     "pretty-quick": "^3.1.3",
-    "typescript": "^5.1.6",
+    "stylelint": "15.10.3",
+    "stylelint-config-idiomatic-order": "9.0.0",
+    "typescript": "5.2.2",
+    "typescript-plugin-css-modules": "5.0.1",
     "vite-tsconfig-paths": "4.2.0",
     "vitest": "0.34.1"
   },
