--- a/package.json
+++ b/package.json
@@ -54,17 +54,17 @@
     "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "zod": "^3.21.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.12",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "14.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.8",
     "@types/react": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
-    "@vitejs/plugin-react": "4.0.4",
+    "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.46.0",
     "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.10.0",
@@ -72,18 +72,18 @@
     "husky": "^8.0.3",
     "jsdom": "22.1.0",
     "lint-staged": "^13.2.3",
-    "postcss": "8.4.30",
-    "postcss-preset-mantine": "1.7.0",
-    "postcss-simple-vars": "7.0.1",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.7.0",
+    "postcss-simple-vars": "^7.0.1",
     "prettier": "^2.8.8",
     "prettier-plugin-prisma": "^4.17.0",
     "pretty-quick": "^3.1.3",
-    "stylelint": "15.10.3",
-    "stylelint-config-idiomatic-order": "9.0.0",
+    "stylelint": "^15.10.3",
+    "stylelint-config-idiomatic-order": "^9.0.0",
     "typescript": "5.2.2",
-    "typescript-plugin-css-modules": "5.0.1",
-    "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.34.1"
+    "typescript-plugin-css-modules": "^5.0.1",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.34.1"
   },
   "private": true
 }
