--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "npm": "8.10.0"
   },
   "dependencies": {
-    "@blitzjs/auth": "^2.0.0-beta.31",
-    "@blitzjs/next": "^2.0.0-beta.31",
-    "@blitzjs/rpc": "^2.0.0-beta.31",
+    "@blitzjs/auth": "2.0.0-beta.34",
+    "@blitzjs/next": "2.0.0-beta.34",
+    "@blitzjs/rpc": "2.0.0-beta.34",
     "@canac/earley-bird": "^0.0.4",
     "@mantine/core": "^7.1.2",
     "@mantine/form": "^7.1.2",
@@ -44,20 +44,20 @@
     "@mantine/notifications": "^7.1.2",
     "@prisma/client": "^5.1.1",
     "@tabler/icons-react": "^2.30.0",
-    "blitz": "^2.0.0-beta.31",
+    "blitz": "2.0.0-beta.34",
     "clsx": "2.0.0",
     "date-fns": "^2.30.0",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
     "moo": "^0.5.2",
-    "next": "^13.4.12",
+    "next": "^13.5.4",
     "prisma": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.4.12",
+    "@next/bundle-analyzer": "^13.5.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@types/lodash": "^4.14.196",
@@ -66,7 +66,7 @@
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@vitejs/plugin-react": "^4.0.4",
     "eslint": "^8.46.0",
-    "eslint-config-next": "^13.4.12",
+    "eslint-config-next": "^13.5.4",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.28.0",
     "husky": "^8.0.3",
