Rename to playlist-gen

--- a/.env.test
+++ b/.env.test
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres@localhost:5432/playlist-gen-blitz_test
+DATABASE_URL=postgresql://postgres@localhost:5432/playlist-gen_test
